# cosc470code

./: .gitignore  README.md  real-match-dtw.ply  real-match-point-angle.ply
Modifications/: point_correspondence.py
Modifications/analysis/: config.json  reconstruction_automation.py
Modifications/data/: contour1.psd  contour2.psd  contour_double.psd  contour_single.psd
Output/automation/: stats.json
SurfaceReconstruction/: CMakeLists.txt  README.md
SurfaceReconstruction/include/: ContourCorrespondence.hpp  ContourStatistics.hpp  Contours.hpp  DTW.hpp  EmptyContour.hpp  MeshUtil.hpp  Modifications.hpp  NotImplemented.hpp  PointCloud.hpp  PointCorrespondence.hpp  PointUtil.hpp  ReconstructionConfig.hpp  ReconstructionErrors.hpp  Statistics.hpp  Surface.hpp  Timer.hpp
SurfaceReconstruction/src/: CMakeLists.txt  ContourCorrespondence.cpp  ContourStatistics.cpp  Contours.cpp  DTW.cpp  MeshUtil.cpp  Modifications.cpp  PointCloud.cpp  PointCorrespondence.cpp  PointUtil.cpp  ReconstructionConfig.cpp  Statistics.cpp  Surface.cpp  Timer.cpp  main.cpp
SurfaceReconstruction/test/: CMakeLists.txt  ContourTests.cpp  ContoursPerformance.cpp  DTWPerformance.cpp  TestMain.cpp  TriangulationTests.cpp
SurfaceReconstruction/testresources/: tests
TestModels/: readme.md
TestModels/export/: bend.ply  multi-branch-2-7.ply  multi-branch.ply  simple-branch-2-6.ply  simple-branch.ply  simple.ply
TestModels/sampled/csize_10/: bend.txt  bend.xyz  multi-branch.txt  multi-branch.xyz  simple-branch.txt  simple-branch.xyz  simple.txt  simple.xyz
TestModels/sampled/csize_20/: bend.txt  bend.xyz  multi-branch.txt  multi-branch.xyz  simple-branch.txt  simple-branch.xyz  simple.txt  simple.xyz
TestModels/sampled/csize_30/: bend.txt  bend.xyz  multi-branch.txt  multi-branch.xyz  simple-branch.txt  simple-branch.xyz  simple.txt  simple.xyz
TestModels/sampled/csize_40/: bend.txt  bend.xyz  multi-branch.txt  multi-branch.xyz  simple-branch.txt  simple-branch.xyz  simple.txt  simple.xyz
TestModels/sampled/csize_50/: bend.txt  bend.xyz  multi-branch.txt  multi-branch.xyz  simple-branch.txt  simple-branch.xyz  simple.txt  simple.xyz
